# darknet_ros_custom

./: CMakeLists.txt  package.xml
msg/: bboxes.msg
src/: ROS_interface.cpp  ROS_interface.h  YOLO_face_depth_detector.cpp  YOLO_face_detector.cpp  YOLO_face_detector.cpp.orig  YOLO_object_detector.cpp  YOLO_person_detector.cpp  image.c.edits  image.h.edits  yolo_face_detector.c  yolo_kernels.cu  yolo_kernels_ROSobj_detector.cu
